--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,14 @@
 <section class='main-section'>
-  <div class="d-flex justify-content-between align-items-center container">
-    <h1 class="fs-4">List of Categories</h1>
-    <%= link_to(new_category_path) do %>
-      <button class='btn btn-secondary'>
-        <i class="fas fa-plus"></i>
-        New Category
-      </button>
-    <% end %>
-  </div>
-  <div class="row my-2 g-4 container-fluid">
+  <div class="row my-2 g-2 container-fluid">
+    <div class="d-flex justify-content-between align-items-center">
+      <h1 class="fs-4">List of Categories</h1>
+      <%= link_to(new_category_path) do %>
+        <button class='btn btn-primary btn-sm'>
+          <i class="fas fa-plus"></i>
+          New Category
+        </button>
+      <% end %>
+    </div>
     <% @categories.each do |category| %>
       <div class="list-group my-2 col-md-6 col-lg-4">
         <label class="list-group-item d-flex shadow-sm">
@@ -26,7 +26,7 @@
             <hr class="mt-0">
             <p><%= truncate(category.description.humanize, length: 50) %></p>
             <small class="d-block">
-              <span>Tasks: <%= category.tasks.count %></span>
+              <span>Completed: <%= completed_tasks(category) %>/<%= category.tasks.count %></span>
             </small>
           </span>
         </label>
