--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -15,14 +15,14 @@
         </div>
         <div class='form-group mt-2'>
           <% if task.completed %>
-            <%= link_to(undo_task_path(task.id), method: :patch) do %>
+            <%= link_to(undo_task_path(task.id), method: :patch, remote: true) do %>
               <span>
                 <i class="fa fa-check-circle text-success"></i>
                 <del><%= task.name.humanize %></del>
               </span>
             <% end %>
           <% else %>
-            <%= link_to(complete_task_path(task.id), method: :patch) do %>
+            <%= link_to(complete_task_path(task.id), method: :patch, remote: true) do %>
               <span>
                 <i class="far fa-circle"></i>
                 <%= task.name.humanize %>
