Changes button to primary

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
           </div>
           <div class="actions my-4 d-flex flex-column justify-content-center">
-            <%= f.submit "Sign up", class: 'btn btn-secondary' %>
+            <%= f.submit "Sign up", class: 'btn btn-primary' %>
             <p class='align-self-center mt-2'>
               Already have an account? <%= link_to "Log In", new_session_path(resource_name),  class: 'link-primary' %>
             </p>
