--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,7 @@
             <%= f.password_field :current_password, autocomplete: "current-password", class:'form-control' %>
           </div>
           <div class="actions my-4 d-flex flex-column justify-content-center">
-            <%= f.submit "Update", class:'btn btn-secondary' %>
+            <%= f.submit "Update", class:'btn btn-primary' %>
           </div>
           <p class='text-center'>Unhappy? <br>
             <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger mt-2' %></p>
