--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -75,7 +75,8 @@ p {
 
 #homepage {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
+    background-color: $body-color;
 }
 .active {
     border: 1px solid $primary-color;
