--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= render 'layouts/notices' %>
     <% end %>
     <% if alert %>
-      <p class="alert text-alert"><%= alert %></p>
+      <%= render 'layouts/alerts' %>
     <% end %>
     <%= yield %>
   </body>
