--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,41 +1,11 @@
 <section class='container-center'>
   <div class="container-fluid row justify-content-center">
     <div class="col-md-7 col-lg-5 bg-light shadow mt-4">
-      <div class="p-4 p-md-5">
-        <h2 class='text-center'>Edit <%= resource_name.to_s.humanize %></h2>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-          <%= render "devise/shared/error_messages", resource: resource %>
-          <div class="field">
-            <%= f.label :email, class:'form-label' %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
-          </div>
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-          <% end %>
-          <div class="field">
-            <%= f.label :password, class:'form-label' %> <i class='text-muted'>(leave blank if you don't want to change it)</i><br />
-            <%= f.password_field :password, autocomplete: "new-password", class:'form-control' %>
-            <% if @minimum_password_length %>
-              <em class='float-end text-muted'><%= @minimum_password_length %> characters minimum</em>
-            <% end %>
-          </div>
-          <br>
-          <div class="field">
-            <%= f.label :password_confirmation, class:'form-label' %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password", class:'form-control' %>
-          </div>
-          <div class="field">
-            <%= f.label :current_password, class:'form-label' %>
-            <i class='text-muted'>(we need your current password to confirm your changes)</i><br />
-            <%= f.password_field :current_password, autocomplete: "current-password", class:'form-control' %>
-          </div>
-          <div class="actions my-4 d-flex flex-column justify-content-center">
-            <%= f.submit "Update", class:'btn btn-primary' %>
-          </div>
-          <p class='text-center'>Unhappy? <br>
-            <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger mt-2' %></p>
-          <%= link_to "Back", :back %>
-        <% end %>
+      <div class="p-4 p-md-5 text-center">
+        <p class='fs-5'>Email: <strong><%= current_user.email %></strong></p>
+        <p>Unhappy? <br>
+          <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger mt-2 w-100' %></p>
+        <%= link_to "Back", :back %>
       </div>
     </div>
   </div>
