Adds style on dropdown item active and focus states

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -84,8 +84,9 @@ p {
 }
 .dropdown-menu a{
     color: #FFFFFF !important;
-    &:hover {
+    &:hover, &:active, &:focus {
         color: $primary-color !important;
+        background-color: #FFFFFF;
     }
 }
 .navbar-toggler-icon {
